<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.user.orientationlearn.MainActivity">

    <Button
        android:id="@+id/first_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/first_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/second_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/second_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/first_button" />

    <Button
        android:id="@+id/third_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/third_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/second_button" />

    <Button
        android:id="@+id/fourth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fourth_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/third_button" />

    <Button
        android:id="@+id/fifth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/fifth_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fourth_button" />

    <Button
        android:id="@+id/sixth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/sixth_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/fifth_button" />

    <Button
        android:id="@+id/seventh_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/seventh_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/sixth_button" />

    <Button
        android:id="@+id/eighth_button"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:text="@string/eighth_button"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/seventh_button" />

</android.support.constraint.ConstraintLayout>
